[package]
name = "royal"
version = "0.1.5"
edition = "2021"
description = "A parser for Persona 5 Royal dialogue message format"
authors = ["emirsassan"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/emirsassan/royal"
keywords = ["parser", "game", "dialogue"]
categories = ["parser-implementations", "game-development"]

[dependencies]
